nswide-mtls/details-mtls-disabled.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "details-disable-mtls"
spec:
  host: details
  trafficPolicy:
    tls:
      mode: DISABLE
